# rust-websocket

./: .gitignore  Cargo.toml
examples/: async-autobahn-client.rs  async-autobahn-server.rs  async-client.rs  async-server.rs  autobahn-client.rs  client.rs  parallel-server.rs  server.rs  ssl-client.rs
src/: dataframe.rs  lib.rs  message.rs  receiver.rs  result.rs  sender.rs  stream.rs
src/client/: async.rs  builder.rs  mod.rs  sync.rs
src/codec/: http.rs  mod.rs  ws.rs
src/header/: connection.rs  host.rs  mod.rs  origin.rs  sec_websocket_accept.rs  sec_websocket_extensions.rs  sec_websocket_key.rs  sec_websocket_protocol.rs  sec_websocket_version.rs  upgrade.rs
src/server/: async.rs  mod.rs  sync.rs
src/server/upgrade/: async.rs  mod.rs  sync.rs
src/ws/: mod.rs  receiver.rs  sender.rs
src/ws/util/: header.rs  mask.rs
